--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Your Moolank</title>
     <!-- <script src="Ai_js.js"></script> -->
-    <link rel="stylesheet" href="aiCss.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
