--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        
         <div class="form-container">
             <form class="input-group">
-            <label for="birthdate">Enter Your Birth Date</label>
+            <label for="birthdate">Enter Your Birth Date In AD</label>
                 <input type="number" id="birthdate" placeholder="day in AD"> <br>
                 <button class="calculate-button">Calculate My Moolank</button>
             </form>
